# Golf-shot-scoring

./: QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt  test_visualizer.py
utils/: __init__.py  angle_calculator.py  pose_detector.py  swing_analyzer.py  visualizer.py
