[project]
name = "golf-swing-analyzer"
version = "0.1.0"
description = "AI-powered golf swing analysis web application using pose detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "pillow>=10.0.0",
]
